[package]
name = "users"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
utoipa ={ version = "4.2.0", features =["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
uuid = { version = "1.2.2", features = ["v4", "serde"] }
axum-macros = "0.4.1"
dotenv = "0.15.0"
axum-server = { version = "0.6", features = ["tls-rustls"] }
sqlx = {version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres", "time", "chrono", "uuid", "bigdecimal"] }
once_cell = "1.19.0"
tower-http = { version = "0.5.1", features = ["cors"] }
jsonwebtoken = "9.2.0"
async-trait = "0.1.77"
argon2 = "0.5.3"


[profile.release-lto]
inherits = "release"
lto = "fat"
opt-level = 3


[features]
build-bindings = []